2001-05-10	Ralf Corsepius	<corsepiu@faw.uni-ulm.de>

	* configure.in: Use RTEMS_PROG_CC_FOR_TARGET([-ansi -fasm]).

2001-04-29	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* ne2000/ne2000.c: Remove #define __INSIDE_RTEMS_BSD_TCPIP_STACK__.

2001-01-05	Joel Sherrill <joel@OARcorp.com>

	* console/vt.c: Added include of <rtems.h> so _CPU_ISR_disable 
	would be visible.

2000-12-05	 Eric Valette <valette@crf.canon.fr>

	* console/inch.c, console/keyboard.c, console/pc_keyb.c,
	console/vt.c, include/bsp.h: Correct incorrect interrupt level
	handling in new keyboard management code.  Correct
	BSP_poll_char initialization routine.
	* start/start.S, startup/bspstart.c: Correct when the video is
	initialized.
	* timer/timer.c (Calibrate_1ms_loop): Address problem where this
	did not work correctly on all PC speeds. The new calibrate routine
	has been tested on Pentium 166, pentium II 200, pentium III
	300 Mhz and does work as expected.

2000-12-05	Joel Sherrill <joel@OARcorp.com>

	* pc386/console/console.c, pc386/console/serial_mouse.c,
	pc386/console/vgainit.c, shared/comm/tty_drv.c: Remove warnings.

2000-11-09	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Use ... instead of RTEMS_TOPdir in ACLOCAL_AMFLAGS.

2000-11-02	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Switch to ACLOCAL_AMFLAGS = -I $(RTEMS_TOPdir)/aclocal.

2000-11-01	Joel Sherrill <joel@OARcorp.com>

	* startup/bspstart.c: assoc.h, error.h, libio_.h, libio.h,
	and libcsupport.h moved from libc to lib/include/rtems and
	now must be referenced as <rtems/XXX.h>.   Header file order
	was cleaned up while doing this.

2000-10-29	Joel Sherrill <joel@OARcorp.com>

	* startup/sbrk.c: Removed.  Redundant with shared version.

2000-10-27	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.in, Makefile.am: ACLOCAL_AMFLAGS= -I $(RTEMS_TOPdir)/macros.
        Switch to GNU canonicalization.

2000-10-23	Joel Sherrill <joel@OARcorp.com>
