@@ -10,7 +10,11 @@ if HAS_NETWORKING
 WD80X3 = wd80x3.h
 endif
 
-H_FILES = bsp.h crt.h $(WD80X3)
+include_HEADERS = bsp.h crt.h coverhd.h $(WD80X3) bspopts.h
+
+coverhd.h: $(top_srcdir)/../../shared/include/coverhd.h
+	cp $< $@
+CLEANFILES += coverhd.h
 
 $(PROJECT_INCLUDE):
 	$(mkinstalldirs) $@
@@ -18,14 +22,11 @@ $(PROJECT_INCLUDE):
 $(PROJECT_INCLUDE)/%.h: %.h
 	$(INSTALL_DATA) $< $@
 
-$(PROJECT_INCLUDE)/coverhd.h: $(top_srcdir)/../../shared/include/coverhd.h
-	$(INSTALL_DATA) $< $@
-
-PREINSTALL_FILES += $(PROJECT_INCLUDE) $(H_FILES:%.h=$(PROJECT_INCLUDE)/%.h) \
-    $(PROJECT_INCLUDE)/coverhd.h
+PREINSTALL_FILES += $(PROJECT_INCLUDE) \
+    $(include_HEADERS:%=$(PROJECT_INCLUDE)/%)
 
 all-local: $(PREINSTALL_FILES)
 
-EXTRA_DIST = bsp.h crt.h wd80x3.h
+EXTRA_DIST = wd80x3.h
 
 include $(top_srcdir)/../../../../../../automake/local.am
