@@ -46,6 +46,8 @@
 extern "C" {
 #endif
 
+#include <bspopts.h>
+
 #include <rtems.h>
 #include <iosupp.h>
 #include <console.h>
